--- a/package.json
+++ b/package.json
@@ -19,9 +19,30 @@
     "pretest": "npm run compile",
     "posttest": "npm run check"
   },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "tsconfig.json"
+      }
+    },
+    "testMatch": [
+      "**/__tests__/*.+(ts|tsx|js)"
+    ]
+  },
   "devDependencies": {
+    "@types/jest": "^23.3.10",
     "@types/node": "^10.12.11",
     "gts": "^0.9.0",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.5",
     "typescript": "~3.1.0"
   }
 }
