--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "src/*.ts",
     "src/**/*.ts",
     "test/*.ts",
-    "test/**/*.ts"
+    "test/**/*.ts",
+    "__tests__/*.ts",
+    "__tests__/**/*.ts"
   ]
 }
