--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     "gts": "^0.9.0",
     "jest": "^23.6.0",
     "ts-jest": "^23.10.5",
+    "ts-node": "^7.0.1",
     "typescript": "~3.1.0"
+  },
+  "dependencies": {
+    "spawn-rx": "^3.0.0"
   }
 }
